--- a/ipython/ipython/profile_default/static/custom/custom.css
+++ b/ipython/ipython/profile_default/static/custom/custom.css
@@ -69,6 +69,11 @@ div.text_cell_render h3 {
     list-style:decimal;
     margin: 1em 2em;
 }
+
+.rendered_html li {
+    line-height: 145%;
+}
+
 .prompt.input_prompt {
     color: rgba(0,0,0,0.5);
 }
